// file: pkg/queue/proto/enums/health_status.proto
// version: 1.0.0
// guid: c5459257-5e52-46bb-a6f6-fb2b6a1e315d
//
// HealthStatus enumeration for the queue module
edition = "2023";

package gcommon.v1.queue;

option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

/**
 * HealthStatus represents queue service availability.
 */
enum HealthStatus {
  // Unspecified status.
  HEALTH_STATUS_UNSPECIFIED = 0;

  // Queue service operating normally.
  HEALTH_STATUS_HEALTHY = 1;

  // Queue service experiencing issues.
  HEALTH_STATUS_DEGRADED = 2;

  // Queue service unavailable.
  HEALTH_STATUS_UNAVAILABLE = 3;
}
